--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
@@ -120,7 +120,7 @@
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 100.00
                                     </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 100.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -150,7 +150,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 85.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br>Two passengers can travel in this car<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -280,7 +280,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -297,7 +297,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -315,7 +315,7 @@
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 <br> Price per
                                         Extra Km : Rs 100.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -328,7 +328,7 @@
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 <br> Price per
                                         Extra Km : Rs 100.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -341,7 +341,7 @@
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 <br> Price per
                                         Extra Km : Rs 85.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -361,7 +361,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -373,7 +373,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -390,7 +390,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br>Fuel Type : Diesel<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
